# Learning

./: CMakeLists.txt  README.md  未命名绘图.drawio
Alarms/: AlarmDelegate.qml  AlarmDialog.qml  AlarmModel.qml  TumblerDelegate.qml  main.qml  qml.qrc
Calculator/: CMakeLists.txt  calculate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  stack.h
GraphOfBJTU/: CMakeLists.txt  CMakeLists.txt.user.ece2e4c  arrayQueue.h  graph.h  main.cpp  mainwindow.cpp  mainwindow.ui  myException.h
HuffmanCode/: CMakeLists.txt  compress.cpp  compress.h  decompress.cpp  decompress.h  huffmanNode.cpp  huffmanNode.h  huffmannode.cpp  huffmannode.h  huffmantree.cpp  huffmantree.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
MonkeyChooseBoss/: CMakeLists.txt  main.qml
MonkeyChooseKing/: CMakeLists.txt  mainwindow.ui
MonkeyKing/: CMakeLists.txt  CirrcularLinkedList.h  itemdef.h  itemdelegate.cpp  itemdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ParkingLot/: CMakeLists.txt  Queue.h  car.h  consumerThread.cpp  consumerThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myExceptions.h  parkingSpot.h  parkinglot.h  producerThread.cpp  producerThread.h  queue.h  sql.cpp  sql.h  test.qrc  work.cpp  worker.h
TestQuick-/: CMakeLists.txt  main.qml
build-Alarms-Desktop-Debug/: Alarms  CMakeCache.txt  Makefile  cmake_install.cmake
build-Alarms-Desktop-Debug/Alarms_autogen/EWIEGA46WW/: qrc_qml.cpp
build-Calculator-Desktop-Debug/: CMakeCache.txt  Calculator  cmake_install.cmake
build-Calculator-Desktop-Debug/Calculator_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-GraphOfBJTU-Desktop-Debug/: CMakeCache.txt  GraphOfBJTU  cmake_install.cmake
build-GraphOfBJTU-Desktop-Debug/GraphOfBJTU_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-HuffmanCode-Desktop-Debug/: CMakeCache.txt  HuffmanCode  cmake_install.cmake
build-HuffmanCode-Desktop-Debug/HuffmanCode_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-MonkeyChooseBoss-Desktop-Debug/: CMakeCache.txt  MonkeyChooseBoss  cmake_install.cmake
build-MonkeyChooseKing-Desktop-Debug/: CMakeCache.txt  MonkeyChooseKing  cmake_install.cmake
build-MonkeyChooseKing-Desktop-Debug/MonkeyChooseKing_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-MonkeyKing-Desktop-Debug/: CMakeCache.txt  MonkeyKing  cmake_install.cmake
build-MonkeyKing-Desktop-Debug/MonkeyKing_autogen/: mocs_compilation.cpp
build-MonkeyKing-Desktop-Debug/MonkeyKing_autogen/EWIEGA46WW/: moc_itemdelegate.cpp.d  moc_mainwindow.cpp.d
build-ParkingLot-Desktop-Debug/: CMakeCache.txt  ParkingLot  cmake_install.cmake  parkinglot.db  test.qrc.depends
build-ParkingLot-Desktop-Debug/ParkingLot_autogen/: moc_predefs.h  mocs_compilation.cpp
build-ParkingLot-Desktop-Debug/ParkingLot_autogen/EWIEGA46WW/: moc_consumerThread.cpp.d  moc_mainwindow.cpp.d  moc_producerThread.cpp.d  moc_worker.cpp.d
build-ParkingLot-Desktop-Debug/parkingLot_autogen/: moc_predefs.h
build-TestQuick--Desktop-Debug/: CMakeCache.txt  Makefile  TestQuick-  cmake_install.cmake
build-TestQuick--Desktop-Debug/TestQuick-_autogen/EWIEGA46WW/: qrc_qml.cpp
build-test-Desktop-Debug/: Makefile  moc_textfinder.cpp  qrc_textFinder.cpp  test  ui_textfinder.h
test/: CirrcularLinkedList.h  Node.h  TextFinder.cpp  TextFinder.h  TextFinder.ui  input.txt  main.cpp  test.pro  textFinder.qrc  textfinder.cpp  textfinder.ui
(+133 files in other folders)
